--- a/02-touch-and-hovers/stylesheets/links.css
+++ b/02-touch-and-hovers/stylesheets/links.css
@@ -1,5 +1,46 @@
 /* Styles for the links */
 
 a {
+  text-decoration: none;
+  position: relative;
+  transition: color 0.4s ease-out;
+}
 
+a:hover {
+  text-decoration: none;
+  color: #457dfb;
+}
+
+a:after {
+  content: "";
+  position: absolute;
+  bottom: 0.1em;
+  left: 0;
+  right: 100%;
+  border-top: 0.1em solid currentColor;
+  transition: right 0.2s cubic-bezier(0, 0.5, 0, 1), color 0.4s ease-out;
+}
+
+a:hover:after {
+  /* right: 0; */
+  animation: anchor-underline 1s ease-out infinite;
+  color: #457dfb;
+}
+
+@keyframes anchor-underline {
+  0%,
+  10% {
+    left: 0;
+    right: 100%;
+  }
+  40%,
+  50% {
+    left: 0;
+    right: 0;
+  }
+  90%,
+  100% {
+    left: 100%;
+    right: 0;
+  }
 }
