--- a/05-on-scroll/stylesheets/main.css
+++ b/05-on-scroll/stylesheets/main.css
@@ -1,9 +1,11 @@
 @import "../../../stylesheets/settings";
 @import "../../../stylesheets/default";
 
-html, body {
+html,
+body {
   background: #fee;
-  color: #19292E;
+  color: #19292e;
+  overflow-x: hidden;
 }
 
 a {
@@ -24,8 +26,10 @@ h3 {
   font-size: 3em;
 }
 
-p, ul {
-  font-size: 1.5em;}
+p,
+ul {
+  font-size: 1.5em;
+}
 
 li {
   font-size: 1em;
@@ -39,41 +43,44 @@ header {
 header:after {
   content: "";
   position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
 }
 
-
 .heading {
-  color: #19292E;
+  color: #19292e;
   font-size: 8em;
   line-height: 1;
   margin: 0;
-  text-shadow: 0 2px 10px rgba(255,255,255,.5);
+  text-shadow: 0 2px 10px rgba(255, 255, 255, 0.5);
   position: absolute;
-    top: 50%;
-    left: 50%;
+  top: 50%;
+  left: 50%;
   transform: translate(-50%, -50%);
   width: 5em;
   z-index: 10;
-} 
+}
 
 .main-photo {
   background-position: center;
   background-size: cover;
   background: url(../images/pizza.jpg);
   border-radius: 50%;
-  box-shadow: 0 0 30em 5em rgba(255,255,255,.5);
+  box-shadow: 0 0 30em 5em rgba(255, 255, 255, 0.5);
   height: 20em;
   filter: blur(2px);
   position: absolute;
-    top: calc(50% - 25.5em);
-    left: calc(50% - 25em);
+  top: calc(50% - 25.5em);
+  left: calc(50% - 25em);
   width: 20em;
 }
 
 .credit {
   font-style: italic;
+}
+
+.next-article h2 {
+  font-size: 32px;
 }
